styles/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

* {
  font-weight: 500;
}

body {
  background-color: #f8f9fa;
}
.auto-grow-input:not(:empty) {
  color: black;
}
.auto-grow-input[contenteditable]:empty::before {
  content: "List Name";
  color: "#d1d5db" !important;
}

.login-step .sbui-btn-container {
  width: 100%;
}

.border-conic-gradient {
  background-image: conic-gradient(
    from 180deg at 50% 50%,
    #ff6a06 0deg,
    #ff6492 120.00000357627869deg,
    #ffe22c 223.12500715255737deg,
    #fc620d 360deg,
    #ff7e33 360deg
  );
}

.sbui-btn > span {
  display: flex;
  align-items: center;
}

.sbui-select:focus-visible {
  border: 1px solid #f76808 !important  ;
  box-shadow:
    0px 0px 0px 2px #ffcca7,
    0px 1px 2px rgba(0, 0, 0, 0.1) !important;
}

.sbui-checkbox:hover {
  border-color: #f76808 !important;
}

input[type="search"]::-webkit-search-cancel-button {
  -webkit-appearance: none !important;
}

.z-10 {
  z-index: 10;
}

.z-20 {
  z-index: 20;
}

.z-30 {
  z-index: 30;
}

.z-40 {
  z-index: 40;
}

.z-50 {
  z-index: 50;
}

div[role="dialog"]::-webkit-scrollbar {
  width: 16px;
  height: 10px;
}
div[role="dialog"]::-webkit-scrollbar-thumb {
  border: 4px solid rgba(0, 0, 0, 0);
  border-radius: 8px;
  background: #c2c9d2;
  background-clip: padding-box;
}
.swiper {
  padding-bottom: 25px !important;
}
:root {
  --swiper-theme-color: hsla(19, 100%, 50%, 1) !important;
  --swiper-pagination-bottom: -5px;
  --swiper-pagination-bullet-inactive-color: rgb(255, 159, 115);
  --swiper-pagination-bullet-size: 8px;
}

.newsletter-wrap {
  container: newsletterWrap / inline-size;
}

@container newsletterWrap (max-width: 240px) {
  .form-wrap {
    flex-wrap: wrap;
  }
  .form-wrap button {
    width: 100%;
  }
}

.loading {
  animation-duration: 1.25s;
  animation-fill-mode: forwards;
  animation-iteration-count: infinite;
  animation-name: placeHolderShimmer;
  animation-timing-function: linear;
  background: linear-gradient(
    to right,
    rgba(255, 255, 255, 0.1) 10%,
    rgba(0, 0, 0, 0.05) 25%,
    rgba(255, 255, 255, 0.1) 40%
  );
  box-shadow: inset 0 0 0 200px rgba(0, 0, 0, 0.05);
  background-size: 800px 104px;
  position: relative;
}

@keyframes placeHolderShimmer {
  0% {
    background-position: -468px 0;
  }
  100% {
    background-position: 468px 0;
  }
}

